Closed Bug 1321410 Opened 9 years ago Closed 9 years ago

Crash in mozilla::dom::HTMLMediaElement::AudioChannelAgentCallback::Resume

Categories

(Core :: Audio/Video: Playback, defect)

Unspecified
Windows 10
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox50 --- unaffected
firefox51 --- unaffected
firefox52 --- unaffected
firefox53 --- fixed

People

(Reporter: marcia, Assigned: alwu)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-c89f65b3-cf4a-4b31-92f0-b72f42161130. ============================================================= Seen while looking at crash stats: http://bit.ly/2fSGN2r. New crash which started with the 20161129171714 build. Possible regression range: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=adcc39e3cad0f32aba0efb478cc4a023a5dfc43f&tochange=13736e2db6eb94b02dd28cc88f2943b8109aa374 Possibly regression from Bug 1309162? ni on :alwu.
Flags: needinfo?(alwu)
Assignee: nobody → alwu
Flags: needinfo?(alwu)
Attachment #8815987 - Flags: review?(jwwang)
Comment on attachment 8815987 [details] Bug 1321410 - stop agent after cycle collection. https://reviewboard.mozilla.org/r/96746/#review97020 ::: dom/html/HTMLMediaElement.cpp:713 (Diff revision 2) > } > > private: > - ~AudioChannelAgentCallback() {}; > + ~AudioChannelAgentCallback() > + { > + Shutdown(); I prefer to require the client to call Shutdown() explicitly and assert that in the destructor. This is also the convention of our media code.
Comment on attachment 8815987 [details] Bug 1321410 - stop agent after cycle collection. https://reviewboard.mozilla.org/r/96746/#review97350 ::: dom/html/HTMLMediaElement.cpp:711 (Diff revision 3) > + { > + if (mAudioChannelAgent) { > + mAudioChannelAgent->NotifyStoppedPlaying(); > + mAudioChannelAgent = nullptr; > + } > + mIsShutDown = true; Assert Shutdown() is only called once.
Attachment #8815987 - Flags: review?(jwwang) → review+
Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/4fe28bb060cf stop agent after cycle collection. r=jwwang
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: